MyLanguageParser.py
# Generated from MyLanguage.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class MyLanguageParser ( Parser ):

    grammarFileName = "MyLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'as'", u"'struct'", u"'new'", u"'..'", 
                     u"'if'", u"'then'", u"'repeat'", u"'times'", u"'endrepeat'", 
                     u"'print'", u"<INVALID>", u"'len'", u"'take'", u"'put'", 
                     u"'remove'", u"'insert'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'elseif'", u"'else'", u"'endif'", u"'var'", 
                     u"'('", u"')'", u"'='", u"<INVALID>", u"';'", u"','" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"STRUCTS", 
                      u"MTD", u"TAK", u"MTH", u"REM", u"METHOD", u"COMMENT", 
                      u"LINE_COMMENT", u"WS", u"ELSEIF", u"ELSE", u"ENDIF", 
                      u"VAR", u"PIZQ", u"PDER", u"ASSIGN", u"ROP", u"SMCOLON", 
                      u"COLON", u"MULOP", u"SUMOP", u"DOUBLE", u"ID" ]

    RULE_commands = 0
    RULE_command = 1
    RULE_declaration = 2
    RULE_method = 3
    RULE_methods = 4
    RULE_var = 5
    RULE_vardos = 6
    RULE_conditional = 7
    RULE_postcond = 8
    RULE_repeat = 9
    RULE_printexpr = 10
    RULE_printwhat = 11
    RULE_expr = 12

    ruleNames =  [ u"commands", u"command", u"declaration", u"method", u"methods", 
                   u"var", u"vardos", u"conditional", u"postcond", u"repeat", 
                   u"printexpr", u"printwhat", u"expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    STRUCTS=11
    MTD=12
    TAK=13
    MTH=14
    REM=15
    METHOD=16
    COMMENT=17
    LINE_COMMENT=18
    WS=19
    ELSEIF=20
    ELSE=21
    ENDIF=22
    VAR=23
    PIZQ=24
    PDER=25
    ASSIGN=26
    ROP=27
    SMCOLON=28
    COLON=29
    MULOP=30
    SUMOP=31
    DOUBLE=32
    ID=33

    def __init__(self, input, output=sys.stdout):
        super(MyLanguageParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CommandsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.CommandsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(MyLanguageParser.CommandContext,0)


        def commands(self):
            return self.getTypedRuleContext(MyLanguageParser.CommandsContext,0)


        def EOF(self):
            return self.getToken(MyLanguageParser.EOF, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_commands

        def enterRule(self, listener):
            if hasattr(listener, "enterCommands"):
                listener.enterCommands(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCommands"):
                listener.exitCommands(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCommands"):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = MyLanguageParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_commands)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.T__1, MyLanguageParser.T__4, MyLanguageParser.T__6, MyLanguageParser.T__9, MyLanguageParser.VAR, MyLanguageParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.command()
                self.state = 27
                self.commands()
                pass
            elif token in [MyLanguageParser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.match(MyLanguageParser.EOF)
                pass
            elif token in [MyLanguageParser.T__8, MyLanguageParser.ELSEIF, MyLanguageParser.ELSE, MyLanguageParser.ENDIF]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.CommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(MyLanguageParser.ConditionalContext,0)


        def repeat(self):
            return self.getTypedRuleContext(MyLanguageParser.RepeatContext,0)


        def printexpr(self):
            return self.getTypedRuleContext(MyLanguageParser.PrintexprContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MyLanguageParser.DeclarationContext,0)


        def method(self):
            return self.getTypedRuleContext(MyLanguageParser.MethodContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_command

        def enterRule(self, listener):
            if hasattr(listener, "enterCommand"):
                listener.enterCommand(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCommand"):
                listener.exitCommand(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCommand"):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = MyLanguageParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.conditional()
                pass
            elif token in [MyLanguageParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.repeat()
                pass
            elif token in [MyLanguageParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.printexpr()
                pass
            elif token in [MyLanguageParser.T__1, MyLanguageParser.VAR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.declaration()
                pass
            elif token in [MyLanguageParser.ID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MyLanguageParser.VAR, 0)

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MyLanguageParser.ExprContext,0)


        def SMCOLON(self):
            return self.getToken(MyLanguageParser.SMCOLON, 0)

        def ASSIGN(self):
            return self.getToken(MyLanguageParser.ASSIGN, 0)

        def STRUCTS(self):
            return self.getToken(MyLanguageParser.STRUCTS, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_declaration

        def enterRule(self, listener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MyLanguageParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(MyLanguageParser.VAR)
                self.state = 41
                self.match(MyLanguageParser.ID)
                self.state = 42
                self.match(MyLanguageParser.T__0)
                self.state = 43
                self.expr(0)
                self.state = 44
                self.match(MyLanguageParser.SMCOLON)
                pass
            elif token in [MyLanguageParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.match(MyLanguageParser.T__1)
                self.state = 47
                self.match(MyLanguageParser.ID)
                self.state = 48
                self.match(MyLanguageParser.ASSIGN)
                self.state = 49
                self.match(MyLanguageParser.T__2)
                self.state = 50
                self.match(MyLanguageParser.STRUCTS)
                self.state = 51
                self.match(MyLanguageParser.SMCOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.MethodContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def methods(self):
            return self.getTypedRuleContext(MyLanguageParser.MethodsContext,0)


        def SMCOLON(self):
            return self.getToken(MyLanguageParser.SMCOLON, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_method

        def enterRule(self, listener):
            if hasattr(listener, "enterMethod"):
                listener.enterMethod(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethod"):
                listener.exitMethod(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethod"):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = MyLanguageParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(MyLanguageParser.ID)
            self.state = 55
            self.match(MyLanguageParser.T__3)
            self.state = 56
            self.methods()
            self.state = 57
            self.match(MyLanguageParser.SMCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.MethodsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(MyLanguageParser.VarContext,0)


        def PIZQ(self):
            return self.getToken(MyLanguageParser.PIZQ, 0)

        def PDER(self):
            return self.getToken(MyLanguageParser.PDER, 0)

        def vardos(self):
            return self.getTypedRuleContext(MyLanguageParser.VardosContext,0)


        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ExprContext,i)


        def METHOD(self):
            return self.getToken(MyLanguageParser.METHOD, 0)

        def COLON(self):
            return self.getToken(MyLanguageParser.COLON, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_methods

        def enterRule(self, listener):
            if hasattr(listener, "enterMethods"):
                listener.enterMethods(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethods"):
                listener.exitMethods(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethods"):
                return visitor.visitMethods(self)
            else:
                return visitor.visitChildren(self)




    def methods(self):

        localctx = MyLanguageParser.MethodsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methods)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.MTD, MyLanguageParser.TAK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.var()
                self.state = 60
                self.match(MyLanguageParser.PIZQ)
                self.state = 61
                self.match(MyLanguageParser.PDER)
                pass
            elif token in [MyLanguageParser.MTH, MyLanguageParser.REM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.vardos()
                self.state = 64
                self.match(MyLanguageParser.PIZQ)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(MyLanguageParser.PDER)
                pass
            elif token in [MyLanguageParser.METHOD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(MyLanguageParser.METHOD)
                self.state = 69
                self.match(MyLanguageParser.PIZQ)
                self.state = 70
                self.expr(0)
                self.state = 71
                self.match(MyLanguageParser.COLON)
                self.state = 72
                self.expr(0)
                self.state = 73
                self.match(MyLanguageParser.PDER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.VarContext, self).__init__(parent, invokingState)
            self.parser = parser

        def MTD(self):
            return self.getToken(MyLanguageParser.MTD, 0)

        def TAK(self):
            return self.getToken(MyLanguageParser.TAK, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_var

        def enterRule(self, listener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVar"):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MyLanguageParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not(_la==MyLanguageParser.MTD or _la==MyLanguageParser.TAK):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardosContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.VardosContext, self).__init__(parent, invokingState)
            self.parser = parser

        def MTH(self):
            return self.getToken(MyLanguageParser.MTH, 0)

        def REM(self):
            return self.getToken(MyLanguageParser.REM, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_vardos

        def enterRule(self, listener):
            if hasattr(listener, "enterVardos"):
                listener.enterVardos(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVardos"):
                listener.exitVardos(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVardos"):
                return visitor.visitVardos(self)
            else:
                return visitor.visitChildren(self)




    def vardos(self):

        localctx = MyLanguageParser.VardosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not(_la==MyLanguageParser.MTH or _la==MyLanguageParser.REM):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.ConditionalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ExprContext,i)


        def ROP(self):
            return self.getToken(MyLanguageParser.ROP, 0)

        def commands(self):
            return self.getTypedRuleContext(MyLanguageParser.CommandsContext,0)


        def postcond(self):
            return self.getTypedRuleContext(MyLanguageParser.PostcondContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_conditional

        def enterRule(self, listener):
            if hasattr(listener, "enterConditional"):
                listener.enterConditional(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConditional"):
                listener.exitConditional(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitConditional"):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = MyLanguageParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MyLanguageParser.T__4)
            self.state = 82
            self.expr(0)
            self.state = 83
            self.match(MyLanguageParser.ROP)
            self.state = 84
            self.expr(0)
            self.state = 85
            self.match(MyLanguageParser.T__5)
            self.state = 86
            self.commands()
            self.state = 87
            self.postcond()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostcondContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.PostcondContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(MyLanguageParser.ELSEIF, 0)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ExprContext,i)


        def ROP(self):
            return self.getToken(MyLanguageParser.ROP, 0)

        def commands(self):
            return self.getTypedRuleContext(MyLanguageParser.CommandsContext,0)


        def postcond(self):
            return self.getTypedRuleContext(MyLanguageParser.PostcondContext,0)


        def ELSE(self):
            return self.getToken(MyLanguageParser.ELSE, 0)

        def ENDIF(self):
            return self.getToken(MyLanguageParser.ENDIF, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_postcond

        def enterRule(self, listener):
            if hasattr(listener, "enterPostcond"):
                listener.enterPostcond(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPostcond"):
                listener.exitPostcond(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPostcond"):
                return visitor.visitPostcond(self)
            else:
                return visitor.visitChildren(self)




    def postcond(self):

        localctx = MyLanguageParser.PostcondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_postcond)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.ELSEIF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(MyLanguageParser.ELSEIF)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(MyLanguageParser.ROP)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(MyLanguageParser.T__5)
                self.state = 94
                self.commands()
                self.state = 95
                self.postcond()
                pass
            elif token in [MyLanguageParser.ELSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(MyLanguageParser.ELSE)
                self.state = 98
                self.commands()
                self.state = 99
                self.match(MyLanguageParser.ENDIF)
                pass
            elif token in [MyLanguageParser.ENDIF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.match(MyLanguageParser.ENDIF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepeatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.RepeatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyLanguageParser.ExprContext,0)


        def commands(self):
            return self.getTypedRuleContext(MyLanguageParser.CommandsContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_repeat

        def enterRule(self, listener):
            if hasattr(listener, "enterRepeat"):
                listener.enterRepeat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRepeat"):
                listener.exitRepeat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRepeat"):
                return visitor.visitRepeat(self)
            else:
                return visitor.visitChildren(self)




    def repeat(self):

        localctx = MyLanguageParser.RepeatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_repeat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MyLanguageParser.T__6)
            self.state = 105
            self.expr(0)
            self.state = 106
            self.match(MyLanguageParser.T__7)
            self.state = 107
            self.commands()
            self.state = 108
            self.match(MyLanguageParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintexprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.PrintexprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def printwhat(self):
            return self.getTypedRuleContext(MyLanguageParser.PrintwhatContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_printexpr

        def enterRule(self, listener):
            if hasattr(listener, "enterPrintexpr"):
                listener.enterPrintexpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrintexpr"):
                listener.exitPrintexpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPrintexpr"):
                return visitor.visitPrintexpr(self)
            else:
                return visitor.visitChildren(self)




    def printexpr(self):

        localctx = MyLanguageParser.PrintexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_printexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MyLanguageParser.T__9)
            self.state = 111
            self.printwhat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintwhatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.PrintwhatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyLanguageParser.ExprContext,0)


        def SMCOLON(self):
            return self.getToken(MyLanguageParser.SMCOLON, 0)

        def method(self):
            return self.getTypedRuleContext(MyLanguageParser.MethodContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_printwhat

        def enterRule(self, listener):
            if hasattr(listener, "enterPrintwhat"):
                listener.enterPrintwhat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrintwhat"):
                listener.exitPrintwhat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPrintwhat"):
                return visitor.visitPrintwhat(self)
            else:
                return visitor.visitChildren(self)




    def printwhat(self):

        localctx = MyLanguageParser.PrintwhatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_printwhat)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(MyLanguageParser.SMCOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MyLanguageParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE(self):
            return self.getToken(MyLanguageParser.DOUBLE, 0)

        def PIZQ(self):
            return self.getToken(MyLanguageParser.PIZQ, 0)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.ExprContext,i)


        def PDER(self):
            return self.getToken(MyLanguageParser.PDER, 0)

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def MULOP(self):
            return self.getToken(MyLanguageParser.MULOP, 0)

        def SUMOP(self):
            return self.getToken(MyLanguageParser.SUMOP, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_expr

        def enterRule(self, listener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyLanguageParser.DOUBLE]:
                self.state = 120
                self.match(MyLanguageParser.DOUBLE)
                pass
            elif token in [MyLanguageParser.PIZQ]:
                self.state = 121
                self.match(MyLanguageParser.PIZQ)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(MyLanguageParser.PDER)
                pass
            elif token in [MyLanguageParser.ID]:
                self.state = 125
                self.match(MyLanguageParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 134
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = MyLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 129
                        self.match(MyLanguageParser.MULOP)
                        self.state = 130
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = MyLanguageParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        self.match(MyLanguageParser.SUMOP)
                        self.state = 133
                        self.expr(5)
                        pass

             
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[12] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




